--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass-chokidar": "^1.3.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -48,11 +49,15 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start:work": "node scripts/start.js",
+    "build:work": "node scripts/build.js",
     "lint": "node scripts/lint.js",
     "lint-fix": "node scripts/lint.js --fix",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start": "npm-run-all --parallel watch-css start:work",
+    "build": "npm-run-all --parallel build-css build:work"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -98,6 +103,7 @@
   },
   "devDependencies": {
     "@endouble.com/eslint-config-endouble": "^1.2.1",
+    "npm-run-all": "^4.1.3",
     "yargs": "^12.0.1"
   }
 }
