--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "@endouble.com/eslint-config-endouble": "^1.2.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
