--- a/package.json
+++ b/package.json
@@ -50,22 +50,24 @@
         "postcss-flexbugs-fixes": "3.2.0",
         "postcss-loader": "2.0.8",
         "promise": "8.0.1",
+        "prop-types": "^15.6.2",
         "raf": "3.4.0",
         "react-dev-utils": "^5.0.1",
         "resolve": "1.6.0",
         "style-loader": "0.19.0",
+        "styled-normalize": "^8.0.3",
         "sw-precache-webpack-plugin": "0.11.4",
         "url-loader": "0.6.2",
+        "watchman": "^1.0.0",
         "webpack": "3.8.1",
         "webpack-dev-server": "2.9.4",
         "webpack-manifest-plugin": "1.3.2",
         "whatwg-fetch": "2.0.3"
     },
     "dependencies": {
-        "prop-types": "^15.6.2",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
-        "watchman": "^1.0.0"
+        "styled-components": "^4.0.2"
     },
     "jest": {
         "collectCoverageFrom": [
