--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "whatwg-fetch": "2.0.3"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "styled-components": "^4.0.2"
