--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
         "lint": "node scripts/lint.js",
-        "test": "node scripts/test.js --env=jsdom",
+        "test": "node scripts/test.js",
         "commit": "git-cz"
     },
     "config": {
@@ -72,7 +72,8 @@
     },
     "jest": {
         "collectCoverageFrom": [
-            "src/**/*.{js,jsx,mjs}"
+            "src/**/*.{js,jsx,mjs}",
+            "!src/api/**"
         ],
         "setupFiles": [
             "<rootDir>/config/polyfills.js"
