test(app): Adding jest and enzime right syntax and support

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-    "extends": "@endouble.com/eslint-config-endouble/react"
+    "extends": "@endouble.com/eslint-config-endouble/react",
+    "env": {
+        "node": true,
+        "mocha": true,
+        "jest": true
+    }
 }
