--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-      "node": "10.12.0"
+        "node": "10.12.0"
     },
     "scripts": {
         "dev": "node scripts/dev.js",
@@ -23,36 +23,20 @@
         "@commitlint/cli": "^6.1.3",
         "@commitlint/config-conventional": "^6.1.3",
         "@endouble.com/eslint-config-endouble": "^1.2.1",
+        "autoprefixer": "7.1.6",
+        "axios": "^0.18.0",
         "babel-core": "6.26.0",
         "babel-eslint": "7.2.3",
         "babel-jest": "20.0.3",
         "babel-loader": "7.1.2",
         "babel-preset-react-app": "^3.1.1",
         "babel-runtime": "6.26.0",
+        "case-sensitive-paths-webpack-plugin": "2.1.1",
+        "chalk": "1.1.3",
         "commitizen": "^2.9.6",
         "css-loader": "0.28.7",
         "dotenv": "4.0.0",
         "dotenv-expand": "4.2.0",
-        "file-loader": "1.1.5",
-        "jest": "20.0.4",
-        "object-assign": "4.1.1",
-        "postcss-flexbugs-fixes": "3.2.0",
-        "postcss-loader": "2.0.8",
-        "promise": "8.0.1",
-        "prop-types": "^15.6.2",
-        "raf": "3.4.0",
-        "resolve": "1.6.0",
-        "style-loader": "0.19.0",
-        "styled-normalize": "^8.0.3",
-        "url-loader": "0.6.2",
-        "watchman": "^1.0.0",
-        "webpack-dev-server": "2.9.4",
-        "whatwg-fetch": "2.0.3",
-        "autoprefixer": "7.1.6",
-        "axios": "^0.18.0",
-        "fs-extra": "3.0.1",
-        "express": "^4.16.4",
-        "react": "^16.4.2",
         "eslint": "4.10.0",
         "eslint-config-react-app": "^2.1.0",
         "eslint-loader": "1.9.0",
@@ -60,16 +44,32 @@
         "eslint-plugin-import": "2.8.0",
         "eslint-plugin-jsx-a11y": "5.1.1",
         "eslint-plugin-react": "7.4.0",
+        "express": "^4.16.4",
+        "extract-text-webpack-plugin": "3.0.2",
+        "file-loader": "1.1.5",
+        "fs-extra": "3.0.1",
+        "html-webpack-plugin": "2.29.0",
+        "jest": "20.0.4",
+        "object-assign": "4.1.1",
+        "postcss-flexbugs-fixes": "3.2.0",
+        "postcss-loader": "2.0.8",
+        "promise": "8.0.1",
+        "prop-types": "^15.6.2",
+        "raf": "3.4.0",
+        "react": "^16.4.2",
         "react-dev-utils": "^5.0.1",
         "react-dom": "^16.4.2",
-        "extract-text-webpack-plugin": "3.0.2",
+        "resolve": "1.6.0",
+        "style-loader": "0.19.0",
         "styled-components": "^4.0.2",
+        "styled-normalize": "^8.0.3",
         "sw-precache-webpack-plugin": "0.11.4",
+        "url-loader": "0.6.2",
+        "watchman": "^1.0.0",
+        "webpack": "3.8.1",
+        "webpack-dev-server": "2.9.4",
         "webpack-manifest-plugin": "1.3.2",
-        "chalk": "1.1.3",
-        "html-webpack-plugin": "2.29.0",
-        "case-sensitive-paths-webpack-plugin": "2.1.1",
-        "webpack": "3.8.1"
+        "whatwg-fetch": "2.0.3"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -86,9 +86,7 @@
         "testEnvironment": "node",
         "testURL": "http://localhost",
         "transform": {
-            "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-            "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-            "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+            "^.+\\.js$": "babel-jest"
         },
         "transformIgnorePatterns": [
             "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
@@ -96,6 +94,9 @@
         "moduleNameMapper": {
             "^react-native$": "react-native-web"
         },
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ],
         "moduleFileExtensions": [
             "web.js",
             "js",
@@ -110,5 +111,10 @@
         "presets": [
             "react-app"
         ]
+    },
+    "devDependencies": {
+        "enzyme": "^3.7.0",
+        "enzyme-adapter-react-16": "^1.6.0",
+        "enzyme-to-json": "^3.3.4"
     }
 }
