--- a/package.json
+++ b/package.json
@@ -115,6 +115,8 @@
     "devDependencies": {
         "enzyme": "^3.7.0",
         "enzyme-adapter-react-16": "^1.6.0",
-        "enzyme-to-json": "^3.3.4"
+        "enzyme-to-json": "^3.3.4",
+        "jsdom": "^13.0.0",
+        "jsdom-global": "^3.0.2"
     }
 }
