--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
         "start": "node scripts/start.js",
         "build": "node scripts/build.js",
         "lint": "eslint src",
-        "test": "node scripts/test.js --env=jsdom"
+        "test": "node scripts/test.js --env=jsdom",
+        "cy:open": "cypress open",
+        "cy:run": "cypress run"
     },
     "jest": {
         "collectCoverageFrom": [
@@ -96,6 +98,8 @@
     },
     "devDependencies": {
         "@endouble.com/eslint-config-endouble": "^2.0.0",
+        "cypress": "^3.1.3",
+        "cypress-testing-library": "^2.3.4",
         "eslint": "^5.9.0",
         "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.14.0",
