added eslint-config-endouble as dev dep

--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "@endouble.com/eslint-config-endouble": "^2.0.0"
   }
 }
