--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "lint": "node scripts/lint.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "lint-endouble": "eslint src/components/*.js"
   },
   "jest": {
     "collectCoverageFrom": [
