--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.2",
     "resolve": "1.6.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
