--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "4.10.0",
+    "eslint": "5.9.0",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.39.1",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "3.2.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
@@ -56,7 +56,7 @@
     "build": "node scripts/build.js",
     "lint": "node scripts/lint.js",
     "test": "node scripts/test.js --env=jsdom",
-    "lint-endouble": "eslint src/components/*.js",
+    "lint-endouble": "eslint src/components/**/*.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -103,7 +103,22 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "@endouble.com/eslint-config-endouble/react",
+    "rules": {
+      "jsx-a11y/label-has-associated-control": [
+        "error",
+        {
+          "controlComponents": [
+            "Input"
+          ]
+        }
+      ]
+    },
+    "env": {
+      "browser": true,
+      "node": true,
+      "jest": true
+    }
   },
   "devDependencies": {
     "@endouble.com/eslint-config-endouble": "^2.0.0",
