--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "private": true,
     "dependencies": {
         "babel-polyfill": "^6.26.0",
+        "enzyme": "^3.8.0",
+        "enzyme-adapter-react-16": "^1.8.0",
         "node-sass": "^4.11.0",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
-        "react-scripts": "2.1.3"
+        "react-scripts": "2.1.3",
+        "react-test-renderer": "^16.7.0"
     },
     "scripts": {
         "start": "cross-env HTTPS=true react-scripts start",
