--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "eslint src/*.js",
-        "fix-lint": "eslint src/*.js --fix"
+        "lint": "eslint src/**/*.js",
+        "fix-lint": "eslint src/**/*.js --fix"
     },
     "browserslist": {
         "development": [
@@ -37,5 +37,6 @@
     "devDependencies": {
         "@endouble.com/eslint-config-endouble": "^2.0.0",
         "cross-env": "^5.2.0"
-    }
+    },
+    "proxy": "http://api.giphy.com/v1/gifs/"
 }
