--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "private": true,
     "dependencies": {
         "babel-polyfill": "^6.26.0",
+        "bootstrap": "^4.2.1",
         "enzyme": "^3.8.0",
         "enzyme-adapter-react-16": "^1.8.0",
+        "jest-enzyme": "^7.0.1",
         "node-sass": "^4.11.0",
+        "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-scripts": "2.1.3",
-        "react-test-renderer": "^16.7.0"
+        "react-test-renderer": "^16.7.0",
+        "reactstrap": "^7.1.0",
+        "sinon": "^7.2.3"
     },
     "scripts": {
         "start": "cross-env HTTPS=true react-scripts start",
